Windows are no longer contained to visible screen (do we want this?).

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,7 @@
-body {
-	font-family:Arial, Helvetica, sans-serif;
-}
-
-table
+html,head,body
 {
-	font-size:1em;
-}
-
-.ui-draggable,.ui-droppable
-{
-	background-position:top;
+	margin:0px;
+	padding:0px;
+	width:100%;
+	height:100%;
 }
